# auditee

./: .dockerignore  .flake8  .gitignore  .gitmodules  .readthedocs.yml  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
auditee/: __init__.py  __main__.py  cli.py  enclave.py  errors.py  ias.py  reproducibility.py  sgx.py  tool.py
auditee/bindings/: arch.h  arch.py  quote.h  quote.py
docs/: ack.rst  background.rst  conf.py  config.rst  credits.rst  demo.rst  examples.rst  glossary.rst  index.rst  refs.bib  refs.rst  relatedwork.rst  sgx.rst  tool.rst
examples/hashmachine/: README.md  README.next.md  default.nix  ias-report.json  ias_report.json  ias_response.json  ias_response_headers.json  quote.json
examples/hashmachine/nix/: sources.json
examples/iot/: README.md
examples/iot-gateway/: Sensor_Data.signature  _ias_report.json  default.nix  enclave.config.xml  ias_report.json  ias_response.json  ias_response_headers.json  quote.json
examples/iot-gateway/nix/: sources.json
examples/sgx-hash/: Dockerfile  README.md  enclave.nix  ias-report.json  quote-100000000.json
examples/sgx-hash/nix/: sources.json
examples/sgx-ra-sample/: sigstruct
tests/: conftest.py  test_reproducibility.py  test_sgx.py
tests/bindings/: test_quote.py
