[metadata]
name = auditee
version = 0.0.1.dev2
description = auditee
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbellem/auditee
author = Sylvain Bellemare
license_file = LICENSE
platforms = linux
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
project_urls =
    Source=https://github.com/sbellem/auditee
    Tracker=https://github.com/sbellem/auditee/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    blessings
    cffi
    colorama
    pydantic
    requests
    python-on-whales

[options.extras_require]
dev =
    ipdb
    ipython
docs:
    sphinx
test =
    pytest

[options.entry_points]
console_scripts =
    auditee=auditee:main
